--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -3,9 +3,13 @@
   padding: 88px 0;
   color: rgba(#ffffff, .3);
   line-height: 1.7;
+  min-height: 406px;
+  max-height: 406px;
 
   @include tablets {
     padding: 50px 0;
+    min-height: 480px;
+    max-height: 480px;
   }
 }
 
