--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -30,3 +30,11 @@
     transition: fill 0.3s;
   }
 }
+.socials--footer {
+  .socials__link {
+    border: 1px solid $text-color;
+    border-radius: 100%;
+    display: flex;
+    padding: 10px;
+  }
+}
