--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -45,6 +45,9 @@
   font-weight: 600;
   opacity: 0.8;
   padding-top: 15px;
+  @include tablets() {
+    font-weight: 300;
+  }
 }
 .user--photo {
   display: flex;
