--- a/src/styles/blocks/job-slider.pcss
+++ b/src/styles/blocks/job-slider.pcss
@@ -13,7 +13,7 @@
   position: relative;
   z-index: 4;
   height: 550px;
-  @include phones() {
+  @include tablets() {
     flex-flow: column;
   }
   @include tablets() {
