--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,5 +1,20 @@
 .menu {
   display: flex;
+  justify-content: space-between;
+}
+.menu.menu--footer {
+  height: auto;
+  color: white;
+  padding-top: 10px;
+  margin-right: 440px;
+  @include tablets() {
+    margin-right:0;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+  }
+  @include phones() {
+  flex-flow:column wrap;
+  }
 }
 .menu__item {
   font-size: 16px;
@@ -9,7 +24,8 @@
     padding-right: 0; 
   }
     @include tablets() {
-    padding-right: 2%;
+    padding-right: 10%;
+    padding-bottom: 2%;
   
   &:last-child {
     padding-right: 0; 
@@ -19,12 +35,7 @@
 .menu__link {
   text-decoration: none;
   white-space: nowrap;
-}
-.menu.menu--footer {
-  height: auto;
-  color: white;
-  padding-top: 10px;
-  margin-right: 440px;
+
 }
 .menu__link:hover {
   color: white;
