адаптив на все секции

--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -65,6 +65,10 @@
   justify-content: space-between;
   width: 56%;
   padding-bottom: 50px;
+  @include tablets() {
+    padding-bottom: 0;
+    width: 45%;
+  }
 
   @include phones() {
     width: 100%;
@@ -76,14 +80,20 @@
 .hero__text .text {
   padding-bottom: 10px;
 }
-.title__name {
+.hero-title__name {
   margin-bottom: 0;
   padding-bottom: 50px;
+  @include tablets(){
+    text-align:left;
+  }
 }
 .hero__comment {
   position: relative;
   font-style: italic;
   margin-bottom: 36px;
+  @include tablets(){
+    margin-bottom: 0;
+  }
   &:before {
     left: calc(-22px - 30px);
     position: absolute;
