--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -13,7 +13,7 @@ section.hero#hero
         .hero__content
             .hero__text
                 p.text Привет, меня зовут
-                h2.title.title__name Буслова Катерина
+                h2.title.hero-title__name Буслова Катерина
                 p.text Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты
             .hero__comment
                 p.text.hero__comment-text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool.Чуть позже я освежу свой контент.А пока посмотрите как тут все классно и красиво!
