--- a/src/index.pug
+++ b/src/index.pug
@@ -19,7 +19,7 @@ html(lang="ru")
         .maincontent__autmn-bg
           include components/feedback
           include components/footer
-    include ./templates/entry.pug
+    //- include templates/entry
 
 
 
