--- a/src/templates/entry.pug
+++ b/src/templates/entry.pug
@@ -1,2 +1,2 @@
-include ./components/skills-templates.pug
-include ./components/works.pug
+include skills-templates
+//- include ./components/works.pug
