добавила параллакс и скрипты на виджеты

--- a/src/index.pug
+++ b/src/index.pug
@@ -11,15 +11,17 @@ html(lang="ru")
     include components/mobile-menu
     .wrapper
       .maincontent
+        include components/parallax-hero
         include components/welcom
         include components/hero
         .middle-section
           include components/skills
           include components/job
         .maincontent__autmn-bg
+          include components/parallax-bottom
           include components/feedback
           include components/footer
-    //- include templates/entry
+    include templates/entry
 
 
 
