--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -1,9 +1,9 @@
-.fullscreen-section {
+/* .fullscreen-section {
     background-image: url("../images/parallax/mountain.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 1080px;
-}
+} */
 .welcome-container {
     position: relative;
     display: flex;
