--- a/src/components/skills-templates.pug
+++ b/src/components/skills-templates.pug
@@ -1,21 +1,24 @@
 script(type="text/x-template")#skills-list
     ul.skills__list 
-        -
-            var skills = [
-            ['FrontEnd', ['HTML5', 'CSS3', 'JavaScript', 'jQuery + Vue.js']],
-            ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']],
-            ]
-        each item in skills
-            li.skills__item.skills__row
-                h3.skills__item-title #{item[0]}
-                ul.skills-diagram__list
-                    each skill in item[1]
-                        li.skills-diagram__item
-                            .skill
-                                svg(viewBox='0 0 100 100' preserveAspectRatio='none').skill__shape
-                                    circle(r=40 cx='50' cy="50").skill__circle.skill__circle_under
-                                    circle(r=40 cx='50' cy="50" stroke="url(#gradient)").skill__circle.skill__circle_above
-                                    linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-                                        stop(offset="0%" stop-color="#5500f2")
-                                        stop(offset="100%" stop-color="#8b00ef")
-                            .skill__title #{skill}
+        li.skills__item(v-for="skill in skills")
+            row(
+        :skill="skill"
+    )
+    script(type="text/x-template")#skills-row
+        .skills__row
+            h3.skills__item-title {{skill.skillsGroup}}
+            ul.skills-diagram__list
+                li.skills-diagram__item(v-for="(skillPercents, skillName) in skill.skills")
+                    skill(
+          :skillName="skillName"
+          :skillPercents="skillPercents"
+        )
+script(type="text/x-template")#skill
+    .skill
+        svg(viewBox="0 0 100 100").skill__circle-shape
+            circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
+            circle(cx="50" cy="50" r="40" ref="color-circle" stroke="url(#gradient)" transform='rotate(180 50 50)').skill__circle.skill__circle_above
+            linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
+                stop(offset="0%" stop-color="#5500f2")
+                stop(offset="100%" stop-color="#8f00ef")
+        .skill__circle-text {{skillName}}
