--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -121,11 +121,9 @@
   }
 }
 .skill {
-  width: 10.375rem;
-  height: 10.375rem;
-  transform: rotate(-180deg);
-  fill: transparent;
   position: relative;
+  width: 166px;
+  height: 166px;
   @include tablets {
     width: 135px;
     height: 135px;
@@ -133,27 +131,27 @@
 }
 .skill__circle {
   fill: transparent;
+  &_under {
+    stroke: #eaeaea;
+    stroke-width: 5px;
+  }
+  &_above {
+    stroke-width: 12px;
+    stroke-dasharray: 251;
+    stroke-dashoffset: 100;
+  }
 }
-.skill__circle_under {
-  stroke: #eaeaea;
-  stroke-width: 0.3125rem;
-}
-.skill__circle_above {
-  stroke-width: 0.60rem;
-  stroke-dasharray: 288;
-  stroke-dashoffset: 100;
-}
-.skill__title {
+.skill__circle-text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
+  font-weight: bold;
   font-size: 18px;
-  font-weight: 700;
-  color: $text-color;
-  opacity: .7;
-  @include tablets() {
-    padding-left: 30px;
+  color: rgba($text-color, .5);
+  padding: 14px;
+
+  @include phones {
+    font-size: 16px;
   }
 }
