--- a/src/index.pug
+++ b/src/index.pug
@@ -18,7 +18,7 @@ html(lang="ru")
           include components/skills
           include components/job
         .maincontent__autmn-bg
-          include components/parallax-bottom
+          //- include components/parallax-bottom
           include components/feedback
           include templates/entry
           include components/footer
