проставила ховеры и фокус

--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -64,14 +64,14 @@
   transform: rotate(180deg);
 }
 .feedback-arrow__prev:hover {
-  border-color: #596478;
-  transition: border-color .3s;
+  border: 1px solid $violet;
+  transition: 0.3s;
 }
 
 .feedback-arrow__next {
   left: 49%;
 }
 .feedback-arrow__next:hover {
-  border-color: #596478;
-  transition: border-color .3s;
+  border: 1px solid $violet;
+  transition: 0.3s;
 }
