--- a/src/components/socials.pug
+++ b/src/components/socials.pug
@@ -3,5 +3,5 @@ mixin socials(mod)
         - var socials = [{name: 'Instagram', link: 'https://instagram.com'}, {name: 'Vkontakte', link: 'https://vk.com'}, {name: 'Github',link: 'https://github.com/Troonsply'}];
         each item in socials
             li.socials__item
-                a(href=item.href).socials__link
+                a.socials__link(href=item.link)
                     +icon(`${item.name}`,'socials__icon')
