--- a/src/styles/blocks/arrow.pcss
+++ b/src/styles/blocks/arrow.pcss
@@ -4,10 +4,10 @@
   fill: $text-color;
 }
 .arrow__btn--prev:hover {
-  fill: #596478;
-  transition: fill .3s;
+  fill:$violet;
+  transition: 0.3s;
 }
 .arrow__btn--next:hover {
-  fill: #596478;
-  transition: fill .3s;
+  fill:$violet;
+  transition: 0.3s;
 }
