--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -13,22 +13,30 @@
   fill: #414c63;
   height:25px;
   width:25px;
+  &:hover {
+    fill:$violet;
+    transition: 0.4s;
+  }
 }
 .socials--footer .socials-item {
-  width: 50px;
-  height: 50px;
-  border: 1px solid #63656c;
-  border-radius: 50%;
-  transition: border 0.3s;
-  
-  &:hover {
-    border: 1px solid #414c63;
-    transition: border 0.3s;
+  .social__item {
+    width: 50px;
+    height: 50px;
+    border: 1px solid $text-color;
+    border-radius: 50%;
+    margin-right: 19px;
+    cursor: pointer;
+    .social__item:hover {
+      border: 1px solid #ffffff;
+      transition: 0.4s;
+    }  
   }
-  &:hover .social__svg {
-    fill: #414c63;
-    transition: fill 0.3s;
-  }
+}
+.socials--footer {
+  .socials__icon:hover  {
+  fill: #ffffff;
+  transition: 0.4s;
+}
 }
 .socials--footer {
   .socials__link {
@@ -36,5 +44,10 @@
     border-radius: 100%;
     display: flex;
     padding: 10px;
+    &:hover {
+      color:#ffffff;
+      border: 1px solid #ffffff;
+      transition: 0.4s;
+    }
   }
 }
