--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -23,7 +23,7 @@
     font-weight: 800;
     text-align: center;
     line-height: 100%;
-    padding-top: 30%;
+    margin-top: 30%;
     padding-bottom: 30%;
     @include desktop() {
         display: flex;
@@ -67,7 +67,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: 15%;
+    bottom: 0;
     width: 100%;
     @include tablets() {
         display: none;
