--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -43,9 +43,9 @@
     margin-bottom: 50px;
     text-align: center;
   }
-  &:focus {
-    border-bottom:5px solid $violet;
-  }
+  /* &:focus {
+    border-bottom:5px solid $violet; //не работает
+  } */
 }
 
 .form-icon {
