--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -1,9 +1,6 @@
-/* .fullscreen-section {
-    background-image: url("../images/parallax/mountain.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+.fullscreen-section {
     min-height: 1080px;
-} */
+}
 .welcome-container {
     position: relative;
     display: flex;
@@ -23,7 +20,7 @@
     font-weight: 800;
     text-align: center;
     line-height: 100%;
-    margin-top: 30%;
+    margin-top: 17%;
     padding-bottom: 30%;
     @include desktop() {
         display: flex;
@@ -42,6 +39,7 @@
     font-weight: 600;
     text-align: center;
     line-height: normal;
+    padding-bottom: 12%;
     @include desktop() {
         text-align: right;
         margin-bottom: 0;
@@ -67,7 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: 0;
+    bottom: 19%;
     width: 100%;
     @include tablets() {
         display: none;
