--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -6,8 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 822px;
-  padding:53px 250px;
+  min-height: 586px;
+  margin-left: 10%;
   @include desktop() {
     padding-right: 2%;
     padding-left: 2%;
@@ -64,7 +64,8 @@
   flex-direction: column;
   justify-content: space-between;
   width: 56%;
-  padding-bottom: 50px;
+  padding-bottom: 20.125rem;
+  padding-left: 5rem;
   @include tablets() {
     padding-bottom: 0;
     width: 45%;
