добавила закольцовку слайдеру ревью

--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -72,3 +72,17 @@
 .reviews__item {
   width: 100%;
 }
+.feedbackBtnOff {
+  border: 1px solid $text-color;
+  &:hover {
+    border: 1px solid $text-color;
+    transition: 1s;
+  }
+}
+.feedbackBtnOff .arrow__btn--svg {
+  fill: $text-color;
+}
+.feedbackBtnOff:hover .arrow__btn--svg {
+  fill: $text-color;
+  transition: 1s;
+}
