добавила якоря в меню

--- a/src/components/form.pug
+++ b/src/components/form.pug
@@ -1,4 +1,4 @@
-.container.form-container
+.container.form-container#contact
     h2.title.form-title Связаться со мной
     form.form.j-form(action="#")
         .form__row
