--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -63,6 +63,7 @@
   color: $text-color;
   padding: 20px 1rem;
   width: 100%;
+  outline-width: 0;
 
   &::-webkit-input-placeholder {
     font-size: 18px;
