--- a/src/components/menu.pug
+++ b/src/components/menu.pug
@@ -1,6 +1,14 @@
 mixin menu(mod)
     ul(class='menu menu--' + mod)
-        - var Menu = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы', 'Связаться'];
+        - 
+            var Menu = [    
+                ['Главная', 'welcom'],
+                ['Обо мне', 'hero'],
+                ['Навыки', 'skills'],
+                ['Работы', 'job'],
+                ['Отзывы', 'feedback'],
+                ['Связаться', 'contact']
+            ];
         each item in Menu
             li.menu__item
-                a.menu__link(href="#") #{item}
+                a.menu__link(href=`#${item[1]}`) #{item[0]}
