--- a/src/styles/blocks/mobile-menu.pcss
+++ b/src/styles/blocks/mobile-menu.pcss
@@ -1,7 +1,10 @@
 .mobile-menu {
   display: none;
   position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
+  top: 0; 
+  right: 0; 
+  bottom: 0; 
+  left: 0;
   z-index: 5;
   .overlay {
     position: absolute;
