--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -1,7 +1,8 @@
 .fullscreen-section {
-    min-height: 1080px;
+  max-height: 1080px;
+  min-height: 1080px;
 }
-.welcome-container {
+.welcome__container {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -60,7 +61,7 @@
     font-size: 36px;
   }
 }
-.welcome-scroll {
+.welcome__scroll {
     position: absolute;
     display: flex;
     justify-content: center;
