--- a/src/components/welcom.pug
+++ b/src/components/welcom.pug
@@ -1,9 +1,9 @@
 section.welcome.fullscreen-section#welcome
     include header
-    .container.welcome-container
+    .container.welcome__container
         h1.title.welcome-title
             span.welcome-title__text Личный сайт <br> веб-разработчика
             span.welcome-title__name Буслова<br> Катерина
-        .welcome-scroll 
-            a.welcome__scroll-link(href="#") Скролл
+        .welcome__scroll 
+            a.welcome__scroll-link(href="#hero") Скролл
                 +icon('Scroll','welcome__scroll-svg')
