работаю над слайдером работ

--- a/src/templates/entry.pug
+++ b/src/templates/entry.pug
@@ -1,2 +1,3 @@
 include ../components/skills-templates.pug
 include ../components/reviews-templates.pug
+include ../components/job-slider-templates.pug
