--- a/src/styles/blocks/job.pcss
+++ b/src/styles/blocks/job.pcss
@@ -2,7 +2,7 @@
   min-height: 1088px;
   max-height: 1088px;
 }
-.job-container {
+.job__container {
   padding: 150px 0;
   display: flex;
   flex-direction: column;
