сhanged blocks to elements

--- a/src/components/feedback.pug
+++ b/src/components/feedback.pug
@@ -1,5 +1,5 @@
 section.feedback#feedback
-    .container.feedback-container
+    .container.feedback__container
       .feedback__title
         h2.title.feedback-title Что обо мне говорят
       #reviews-slider
