--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,5 +1,5 @@
 header.header
-    .container.header-container
+    .container.header__container
         include logo
         include menu
         +menu('header')
