--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -1,5 +1,5 @@
 section.hero#hero
-    .container.hero-container
+    .container.hero__container
         .hero__face
             .hero__avatar
                 +image('content/user/user.jpg', 'user-pic')
