--- a/src/components/job-slider-templates.pug
+++ b/src/components/job-slider-templates.pug
@@ -47,7 +47,7 @@ script(type="text/x-template")#sliderContent-template
             .slider-desc__info
                 p {{currentProject.info}}
             a.slider-desc__link(:href="currentProject.link") Посмотреть сайт
-                +icon('Link', 'slider-desc__link-svg')
+                +icon('Link', 'slider-desc__link__svg')
 
 script(type="text/x-template")#sliderContentTags-template
     ul.slider-desc__list
