--- a/src/components/skills.pug
+++ b/src/components/skills.pug
@@ -1,5 +1,5 @@
 section.skills#skills
-    .container.skills-container
+    .container.skills__container
         .skills__content
             h2.title.skills-title Чем я могу быть вам полезна
             p.text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool. Чуть позже я освежу в нем свой контент. А пока посмотрите, как тут всё классно и красиво!
