--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
 }
-.hero-container {
+.hero__container {
   height: 100%;
   display: flex;
   justify-content: center;
