--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -1,5 +1,5 @@
 footer.footer#footer
-  .container.footer-container
+  .container.footer__container
     .footer__copyright
       .footer__copyright-col
         .footer__copyright-year &copy; 2019
