--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -7,7 +7,7 @@
   min-height: 1400px;
   max-height: 1400px;
 }
-.feedback-container {
+.feedback__container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
