--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -7,7 +7,7 @@
     margin-bottom: 75px;
   }
 }
-.skills-container {
+.skills__container {
   display: flex;
   flex-direction: column;
   position: relative;
