edit style mobile-menu

--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -12,7 +12,7 @@ section.hero#hero
                             td.hero__desc-text #{row[1]}
         .hero__content
             .hero__text
-                p.text Привет, меня зовут
+                .text Привет, меня зовут
                 h2.title.hero-title__name Буслова Катерина
                 p.text Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты
             .hero__comment
