--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -69,7 +69,10 @@
 }
 
 .feedback-arrow__next {
-  left: 49%;
+  margin-left: 5%;
+    @include tablets(){
+    margin-left: 3%;
+  }
 }
 .feedback-arrow__next:hover {
   border: 1px solid $violet;
