--- a/src/styles/blocks/mobile-menu.pcss
+++ b/src/styles/blocks/mobile-menu.pcss
@@ -22,7 +22,12 @@
     }
   }
 }
-
+.menu--mobile {
+  display: flex;
+  flex-flow: column;
+  font-weight: 600;
+  padding-bottom: 3%;
+}
 #close-btn {
   color: $text-color;
   font-size: 50px;
