--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -28,20 +28,18 @@
     .parallax__image {
       object-fit: cover;
       width: 100%;
-      height: 100%;
+      height: 100vh;
     }
   }
   &:nth-child(2) {
-    /* transform: translateZ(-50px) scale(1.5); */
     display: block;
     .parallax__image {
-      top: 360px;
+      top: 11.5rem;
       right: 0;
       width: 100%;
     }
   }
   &:nth-child(3) {
-    /* transform: translateZ(-100px) scale(2); */
     display: block;
     .parallax__image {
       left: 50%;
@@ -50,7 +48,6 @@
     }
   }
   &:nth-child(4) {
-    /* transform: translateZ(-150px) scale(2.5); */
     display: block;
     .parallax__image {
       left: 0;
@@ -59,29 +56,27 @@
     }
   }
   &:nth-child(5) {
-    /* transform: translateZ(-200px) scale(3); */
     display: block;
     .parallax__image {
       left: 0;
-      top: 610px;
+      top: 41.125rem;
     }
   }
   &:nth-child(6) {
     display: block;
-    /* transform: translateZ(-250px) scale(3.5); */
     .parallax__image {
       right: 0;
-      top: 416px;
+      top: 29rem;
       bottom: 0;
     }
   }
   &:nth-child(7) {
     display: block;
-    /* transform: translateZ(-300px) scale(4); */
     .parallax__image {
       left: 0;
       width: 100%;
-      bottom: 0px;
+      top:66rem;
+      clip-path: polygon(0% 0%, 0% 80%, 50% 100%, 100% 80%,100% 0%);
     }
   }
 }
