edit slider portfolio

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,10 +10,11 @@ html(lang="ru")
   body
     include components/mobile-menu
     .wrapper
-      include components/parallax-hero
       .maincontent
-        include components/welcom
-        include components/hero
+        include components/parallax-hero
+        .first-section
+          include components/welcom
+          include components/hero
         .middle-section
           include components/skills
           include components/job
