--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -124,9 +124,9 @@
   position: relative;
   width: 166px;
   height: 166px;
-  @include tablets {
-    width: 135px;
-    height: 135px;
+  @include phones() {
+    width: 7.4375rem;
+    height: 7.4375rem;
   }
 }
 .skill__circle {
