--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -18,6 +18,11 @@
     transition: 0.4s;
   }
 }
+.socials--header {
+  @include phones(){
+    display: none;
+  }
+}
 .socials--footer .socials-item {
   .social__item {
     width: 50px;
