--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -1,5 +1,7 @@
+.welcome {
+  position: relative;
+}
 .welcome__container {
-    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
