--- a/src/styles/blocks/job-slider.pcss
+++ b/src/styles/blocks/job-slider.pcss
@@ -6,37 +6,34 @@
   @include phones() {
     margin-top: 0;
   }
-}
-.slider {
-  display: flex;
-  width: 66%;
-  position: relative;
-  z-index: 4;
-  height: 550px;
-  @include tablets() {
-    flex-flow: column;
-  }
-  @include tablets() {
-    margin-bottom: 105px;
-    width: 86%;
-  }
-  &:before {
+    &:after {
     content: attr(data-slide);
     position: absolute;
     top: 50%;
-    transform: translateY(-60%);
+    transform: translateY(-76%);
     line-height: 1;
-    left: 100%;
+    right:15%;
     font-size: 400px;
     font-weight: 800;
-    margin-left: -8%;
-    color: rgba($text-color, .05);
+    color: $text-color;
+    opacity: 0.3;
     
     @include desktop() {
       top: 0;
       transform: translateY(-15%);
       margin-left: -11%;
     }
+  }
+}
+.slider {
+  display: flex;
+  position: relative;
+  @include tablets() {
+    flex-flow: column;
+  }
+  @include tablets() {
+    margin-bottom: 105px;
+    width: 86%;
   }
   @include phones() {
     width: 100%;
@@ -53,7 +50,7 @@
   object-fit: contain;
   }
 }
-.slider-list {
+.slider__list {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -66,7 +63,7 @@
     display: none;
   }
 }
-.slider-list__item {
+.slider__list-item {
   cursor: pointer;
   width: 178px;
   height: 100px;
@@ -81,14 +78,11 @@
     height: 81px;
   }
 }
-.slider-list__btn {
-  padding: 0;
-}
-.slider-list__item-pic {
+.slider__list-item-pic {
   width: 100%;
   object-fit: cover;
 }
-.slider-list__item--active {
+.slider__list-item--active {
   border: 2px solid #f29400;
 }
 .slider__switch-wrap {
@@ -113,7 +107,7 @@
   cursor: pointer;
   width: 50px;
   height: 50px;
-  background-color: #414c63;
+  background-color: #414c63 !important;
   transition: background-color 0.2s;
 
   &:hover {
@@ -158,21 +152,6 @@
     @include phones() {
       width: 100%;
   }
-
-  &:before {
-    content: '1';
-    position: absolute;
-    top: 0;
-    left: -55px;
-    z-index: -2;
-    color: #f0f0f0;
-    font-size: 400px;
-    font-weight: 800;
-    line-height: 473px;
-    @include tablets() {
-      display: none;
-    }
-  }
 }
 
 .slide-num {
@@ -186,9 +165,11 @@
 }
 .slider-desc__list {
   display: flex;
+  margin-left: 95%;
   @include tablets() {
     padding: 35px 0;
     justify-content: center;
+    margin-left: 0;
   }
 }
 .slider-desc__item {
