--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -1,16 +1,16 @@
 .hero {
   position: relative;
+  min-height: 822px;
+  max-height: 822px;
 }
 .hero__container {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 586px;
-  margin-left: 10%;
   @include desktop() {
     padding-right: 2%;
     padding-left: 2%;
+    margin-top: 10rem;
   }
   @include phones() {
     flex-direction: column;
@@ -21,7 +21,6 @@
 .hero__face {
   display: flex;
   justify-content: center;
-  margin-bottom: 70px;
   flex-flow: column;
     @include phones(){
     width: 100%;
@@ -34,8 +33,7 @@
   overflow: hidden;
   border-radius: 50%;
   box-shadow: 0px 10px 24px 0 rgba(#000, .3);
-  margin: 80px 75px 80px 75px;
-  flex-shrink: 0;
+  margin: 4rem 3.6875rem;
   object-fit: cover;
   object-position: top;
   @include phones(){
@@ -67,7 +65,6 @@
   flex-direction: column;
   justify-content: space-between;
   width: 56%;
-  padding-bottom: 20.125rem;
   padding-left: 5rem;
   @include tablets() {
     padding-bottom: 0;
