--- a/src/styles/blocks/job.pcss
+++ b/src/styles/blocks/job.pcss
@@ -3,7 +3,7 @@
   max-height: 1088px;
 }
 .job__container {
-  padding: 150px 0;
+  padding: 8.375rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
