--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -6,10 +6,6 @@
   right: 0;
   z-index: -100;
 
-  @include desktopbg() {
-    display: none;
-  }
-
   @include tablets() {
     display: none;
   }
@@ -29,12 +25,15 @@
       object-fit: cover;
       width: 100%;
       height: 100vh;
+      @include desktop(){
+        height: 50vh;
+      }
     }
   }
   &:nth-child(2) {
     display: block;
     .parallax__image {
-      top: 11.5rem;
+      top: 22.5rem;
       right: 0;
       width: 100%;
     }
@@ -42,9 +41,13 @@
   &:nth-child(3) {
     display: block;
     .parallax__image {
-      left: 50%;
-      top: 518px;
+      left: 48rem;
+      top: 29.375rem;
       transform: translateX(367px);
+      @include desktop(){
+        left: 41rem;
+        top: 19.375rem;
+      }
     }
   }
   &:nth-child(4) {
@@ -52,22 +55,28 @@
     .parallax__image {
       left: 0;
       width: 100%;
-      top: 610px;
+      top: 32.125rem;
     }
   }
   &:nth-child(5) {
     display: block;
     .parallax__image {
       left: 0;
-      top: 41.125rem;
+      top: 38.125rem;
+      @include desktop(){
+        top: 30.125rem;
+      }
     }
   }
   &:nth-child(6) {
     display: block;
     .parallax__image {
       right: 0;
-      top: 29rem;
+      top: 37rem;
       bottom: 0;
+       @include desktop(){
+        top: 17rem;
+      }
     }
   }
   &:nth-child(7) {
@@ -77,6 +86,9 @@
       width: 100%;
       top:66rem;
       clip-path: polygon(0% 0%, 0% 80%, 50% 100%, 100% 80%,100% 0%);
+      @include desktop(){
+        top: 62rem;
+      }
     }
   }
 }
