--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -1,10 +1,10 @@
 .welcome {
   position: relative;
+  padding-top: 3rem;
 }
 .welcome__container {
     display: flex;
     flex-direction: column;
-    height: 100%;
     align-items: center;
     justify-content: center;
       @include desktop {
