--- a/src/styles/mixins.pcss
+++ b/src/styles/mixins.pcss
@@ -21,7 +21,7 @@
     @content;
   }
 }
-@mixin desktopbg() {
+@mixin desktopBg() {
   @media screen and (max-width: $bp-desktop-bg) {
     @content;
   }
