--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -68,7 +68,6 @@
   padding-left: 5rem;
   @include tablets() {
     padding-bottom: 0;
-    width: 45%;
   }
 
   @include phones() {
@@ -80,6 +79,7 @@
   padding-bottom: 110px;
     @include tablets(){
     font-size: 18px;
+    padding-bottom: 3rem;
   }
 }
 .hero__text .text {
