--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -22,6 +22,7 @@
     @include tablets() {
       align-items: center;
       justify-content: center;
+      left: 9%;
     }
 
     @include phones() {
@@ -46,7 +47,7 @@
    @include tablets() {
       position: absolute;
       top: 1%;
-      left: -12%;
+      left: 0;
    }
     @include phones(){
       display:none;
