--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -48,6 +48,9 @@
     @include tablets() {
         text-align: center;
         margin-right: 0;
+        padding-top: 0;
+        padding-right: 0;
+        padding-bottom: 0;
   }
     @include phones() {
         font-size: 14px;
