--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -5,10 +5,6 @@
   left: 0;
   right: 0;
   z-index: -100;
-
-  @include tablets() {
-    display: none;
-  }
 }
 
 .parallax__layer {
@@ -36,6 +32,9 @@
       top: 22.5rem;
       right: 0;
       width: 100%;
+      @include tablets(){
+        top: 29.5rem;
+      }
     }
   }
   &:nth-child(3) {
@@ -47,6 +46,9 @@
       @include desktop(){
         left: 41rem;
         top: 19.375rem;
+      }
+      @include tablets(){
+        left: 17rem;
       }
     }
   }
@@ -65,6 +67,10 @@
       top: 38.125rem;
       @include desktop(){
         top: 30.125rem;
+      }
+      @include tablets(){
+        left: -26rem;
+        top: 16.125rem;        
       }
     }
   }
