--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -1,6 +1,10 @@
 .socials {
   display: flex;
   flex-flow: row;
+  @include tablets(){
+    position: absolute;
+    right: 8rem;
+  }
 }
 .socials__item {
   padding-left: 45px;
@@ -38,6 +42,10 @@
   }
 }
 .socials--footer {
+  @include tablets(){
+    position: absolute;
+    right: 18rem;
+  }
   .socials__icon:hover  {
   fill: #ffffff;
   transition: 0.4s;
