--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -11,6 +11,10 @@
     min-height: 480px;
     max-height: 480px;
   }
+  @include phones(){
+    min-height: 745px;
+    max-height: 745px;
+  }
 }
 
 .footer__container {
