--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -13,7 +13,7 @@
     justify-content: flex-start;
   }
   @include phones() {
-  flex-flow:column wrap;
+    margin-right: 3rem;
   }
 }
 .menu__item {
