--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -7,8 +7,8 @@
       margin:0 auto;
     }
     @include phones(){
-    margin-left: 0;
-     overflow: hidden;
+    overflow: hidden;
+    margin: 3rem auto;
   }
 }
 .reviews__slider-item {
