--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -46,6 +46,9 @@
     position: absolute;
     right: 18rem;
   }
+  @include phones(){
+    right: 6rem;
+  }
   .socials__icon:hover  {
   fill: #ffffff;
   transition: 0.4s;
