edit photo user

--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -2,7 +2,7 @@ section.hero#hero
     .container.hero__container
         .hero__face
             .hero__avatar
-                +image('content/user/user.jpg', 'user-pic', alt="Буслова Екатерина")
+                +image('content/user/user1.jpg', 'user-pic', alt="Буслова Екатерина")
             .hero__data
                 table.hero__desc
                     - var data=[['Проживаю:','Санкт-Петербург'],['Возраст:','26 лет'],['Родилась:','5 ноября 1992']];
