--- a/src/admin/index.pug
+++ b/src/admin/index.pug
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-html(lang="ru")
+html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Portfolio | Админка
+    title Portfolio | admin
   body
     .wrapper.admin-wrapper
       .maincontent
